fix: focus outline radius

--- a/src/components/sbb-link/sbb-link.scss
+++ b/src/components/sbb-link/sbb-link.scss
@@ -72,6 +72,8 @@
 
   &:focus-visible {
     @include focusOutline;
+
+    border-radius: calc(var(--sbb-border-radius-4x) - var(--sbb-focus-outline-offset));
   }
 
   :host([disabled]) & {
