feat: add scrollbar color for Firefox

--- a/src/global/mixins.scss
+++ b/src/global/mixins.scss
@@ -82,6 +82,7 @@
 
   /* style for Firefox */
   scrollbar-width: thin;
+  scrollbar-color: var(--sbb-color-white-alpha-30) transparent;
 }
 
 @mixin scrollbar-dark() {
