--- a/src/components/sbb-pearl-chain-vertical/sbb-pearl-chain-item/sbb-pearl-chain-item.scss
+++ b/src/components/sbb-pearl-chain-vertical/sbb-pearl-chain-item/sbb-pearl-chain-item.scss
@@ -40,6 +40,7 @@
   --dot-size: var(--dot-size-small);
   --bullet-border-width: var(--sbb-border-width-2x);
   --border-width: var(--sbb-border-width-2x);
+  --border-width-thin: var(--sbb-border-width-1x);
   --spacing-small: var(--sbb-spacing-fixed-1x);
   --spacing-medium: var(--sbb-spacing-fixed-4x);
   --color-white: var(--sbb-color-white-default);
@@ -55,29 +56,29 @@
   animation: unset;
 }
 
-.sbb-pearl-chain-item__dot-size-small {
+.sbb-pearl-chain-item__dot-size--small {
   margin-inline-start: #{px-to-rem-build(1.5)};
 
   --dot-size: var(--dot-size-small);
 }
 
-.sbb-pearl-chain-item__dot-size-medium {
+.sbb-pearl-chain-item__dot-size--medium {
   margin-inline-start: #{px-to-rem-build(1)};
 
   --dot-size: var(--dot-size-medium);
 }
 
-.sbb-pearl-chain-item__dot-size-large {
+.sbb-pearl-chain-item__dot-size--large {
   --dot-size: var(--dot-size-large);
 }
 
-.sbb-pearl-chain-item__dot-size-ultra {
+.sbb-pearl-chain-item__dot-size--ultra {
   margin-inline-start: -1px;
 
   --dot-size: var(--dot-size-ultra);
 }
 
-.sbb-pearl-chain-item__dot-size-extra-small {
+.sbb-pearl-chain-item__dot-size--extra-small {
   margin-inline-start: calc(var(--dot-size-extra-small) / 2 - var(--bullet-border-width));
   top: calc(var(--dot-size-extra-small) / 2 - var(--bullet-border-width));
 
@@ -89,6 +90,8 @@
 }
 
 .sbb-pearl-chain-item__line {
+  @include border;
+
   &::after {
     content: '';
     position: absolute;
@@ -100,51 +103,51 @@
   }
 }
 
-.sbb-pearl-chain-item__line-standard {
-  @include border;
-}
-
 .position__dot {
   --dot-size: var(--dot-size-large);
   @include dot;
 
   position: absolute;
-  animation: pulse 3s infinite;
+  animation: pulse 4800ms var(--sbb-animation-easing) infinite;
   border: var(--border-width) currentcolor;
   border-color: var(--color-cancellation);
   background-color: var(--color-cancellation);
 }
 
-.sbb-pearl-chain-item__line-dotted {
-  @include border;
-
-  background-color: transparent !important;
-  border: 1px;
-  border-style: dashed;
+.sbb-pearl-chain-item__line--dotted {
+  background-color: unset;
+  border-color: unset;
+  background-image: linear-gradient(
+    to bottom,
+    currentcolor 0%,
+    currentcolor 50%,
+    var(--color-white) 50%
+  );
+  background-repeat: repeat-y;
+  background-size: calc(2 * var(--spacing-small)) var(--spacing-small);
+  margin-inline-start: #{px-to-rem-build(4)};
 }
 
-.sbb-pearl-chain-item__line-thin {
-  @include border;
-
-  width: 1px;
+.sbb-pearl-chain-item__line--thin {
+  width: var(--border-width-thin);
   margin-left: #{px-to-rem-build(4.48)};
 }
 
-.sbb-pearl-chain-item__dot-standard {
+.sbb-pearl-chain-item__dot--standard {
   @include dot;
 
   border: var(--border-width) currentcolor;
 }
 
-.sbb-pearl-chain-item__dot-thick-bullet {
+.sbb-pearl-chain-item__dot--thick-bullet {
   @include dot--transfer;
 
   border: var(--bullet-border-width) solid currentcolor;
   background-color: var(--color-white) !important;
 }
 
-.sbb-pearl-chain-item__dot-thin-bullet {
-  --bullet-border-width: var(--sbb-border-width-1x);
+.sbb-pearl-chain-item__dot--thin-bullet {
+  --bullet-border-width: var(--border-width-thin);
   @include dot--transfer;
 
   border: var(--bullet-border-width) solid currentcolor;
@@ -154,24 +157,28 @@
 .sbb-color__black {
   background-color: var(--color-default);
   border-color: var(--color-default);
+  color: var(--color-default);
 }
 
 .sbb-color__red {
   border-color: var(--color-cancellation);
   background-color: var(--color-cancellation);
+  color: var(--color-cancellation);
 }
 
 .sbb-color__gray {
   border-color: var(--color-past);
   background-color: var(--color-past);
+  color: var(--color-past);
 }
 
 .sbb-color__sky {
   border-color: var(--color-sky);
   background-color: var(--color-sky);
+  color: var(--color-sky);
 }
 
-.sbb-pearl-chain-item__row-middle {
+.sbb-pearl-chain-item__row--middle {
   position: relative;
   padding-top: 0;
   vertical-align: top;
@@ -183,12 +190,12 @@
   margin-top: 1px;
 }
 
-.sbb-pearl-chain-item__row-left {
+.sbb-pearl-chain-item__row--left {
   vertical-align: top;
   position: relative;
 }
 
-.sbb-pearl-chain-item__row-right {
+.sbb-pearl-chain-item__row--right {
   vertical-align: top;
   position: relative;
   padding-bottom: var(--sbb-spacing-fixed-3x);
@@ -200,11 +207,29 @@
 }
 
 @keyframes pulse {
-  0% {
-    box-shadow: 0 0 0 0 var(--color-current-location-dark);
+  from {
+    box-shadow: 0 0 0 0 var(--sbb-color-red);
   }
 
   40% {
-    box-shadow: 0 0 0 #{px-to-rem-build(6)} transparent;
+    box-shadow: 0 0 0 #{px-to-rem-build(4)} var(--sbb-color-red-alpha-20);
+  }
+
+  80% {
+    box-shadow: 0 0 0 0 var(--sbb-color-red);
+  }
+}
+
+@keyframes pulse-dot {
+  from {
+    transform: scale(1);
+  }
+
+  50% {
+    transform: scale(1.6);
+  }
+
+  to {
+    transform: scale(1);
   }
 }
