fix: adaptive width

--- a/src/components/sbb-form-field/sbb-form-field.scss
+++ b/src/components/sbb-form-field/sbb-form-field.scss
@@ -5,8 +5,9 @@
 
 :host {
   display: inline-block;
-  width: #{px-to-rem-build(300)};
+  max-width: #{px-to-rem-build(300)};
   min-width: #{px-to-rem-build(150)};
+  width: 100%;
 
   --form-field-background-color: var(--sbb-color-white-default);
   --form-field-border-color: var(--sbb-color-smoke-default);
